fix: increase z-index on designathon modals

--- a/src/app/pages/Designathons/Designathon23/components/Profile/Modal/Modal.module.scss
+++ b/src/app/pages/Designathons/Designathon23/components/Profile/Modal/Modal.module.scss
@@ -8,7 +8,7 @@
 	place-content: center;
 	background-color: #00000088;
 	transition: opacity 250ms;
-	z-index: 10;
+	z-index: 1001;
 
 	& > .container {
 		background-color: black;
